@@ -19,6 +19,7 @@
 - Removed Apply button from ticket dialog
 - Added new portlet that shows files uploaded in the last 7 days.
 - Fixed: file does not exist: /themes errors in apache log
+- Subfolders of the sent, drafts and trash folders in the e-mail were not treated as such.
 
 03-09-2012 4.0.95
 - Missing content-lenght header caused GOTA problem.
